// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<ForwardRef(Box)
  sx={
    Object {
      "backgroundColor": "#f4f5f7",
    }
  }
>
  <GlobalMenu
    barPosition="static"
  />
  <ForwardRef(Box)
    sx={
      Object {
        "marginTop": 5,
        "marginX": 10,
      }
    }
  >
    <ForwardRef(Grid)
      container={true}
      spacing={4}
    >
      <ForwardRef(Grid)
        item={true}
        xs={12}
      >
        <ArticlePaper
          variant="navi"
        >
          <Link
            to="/"
          >
            マップへ戻る
          </Link>
        </ArticlePaper>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        xs={8}
      >
        <ArticlePaper
          variant="main"
        >
          <ForwardRef(Stack)
            spacing={2}
          >
            <ForwardRef(Typography)
              align="center"
              component="h2"
              variant="h4"
            >
              title
            </ForwardRef(Typography)>
            <ForwardRef(Typography)>
              content
            </ForwardRef(Typography)>
            <ForwardRef(Box)
              sx={
                Object {
                  "position": "relative",
                }
              }
            >
              <TriviaMap
                disabled={true}
                doNotShowMarkers={true}
                height={400}
                initCenter={
                  Object {
                    "lat": 0,
                    "lng": 0,
                  }
                }
                initZoom={3}
              />
              <ForwardRef(Box)
                sx={
                  Object {
                    "backgroundColor": "rgba(0,0,0,0.5)",
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                    "zIndex": 2000,
                  }
                }
              />
            </ForwardRef(Box)>
          </ForwardRef(Stack)>
        </ArticlePaper>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        xs={4}
      >
        <ArticlePaper
          variant="side"
        >
          サイドバー
        </ArticlePaper>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </ForwardRef(Box)>
</ForwardRef(Box)>
`;

exports[`Shallow Snapshot Tests loading 1`] = `
<ForwardRef(Box)
  sx={
    Object {
      "backgroundColor": "#f4f5f7",
    }
  }
>
  <GlobalMenu
    barPosition="static"
  />
  <ForwardRef(Box)
    sx={
      Object {
        "marginTop": 5,
        "marginX": 10,
      }
    }
  >
    <ForwardRef(Grid)
      container={true}
      spacing={4}
    >
      <ForwardRef(Grid)
        item={true}
        xs={12}
      >
        <ArticlePaper
          variant="navi"
        >
          <Link
            to="/"
          >
            マップへ戻る
          </Link>
        </ArticlePaper>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        xs={8}
      >
        <ArticlePaper
          variant="main"
        >
          <ForwardRef(Box)
            sx={
              Object {
                "display": "flex",
                "justifyContent": "center",
              }
            }
          >
            <ForwardRef(CircularProgress) />
          </ForwardRef(Box)>
        </ArticlePaper>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        xs={4}
      >
        <ArticlePaper
          variant="side"
        >
          サイドバー
        </ArticlePaper>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </ForwardRef(Box)>
</ForwardRef(Box)>
`;

exports[`Shallow Snapshot Tests mobile view 1`] = `
<ForwardRef(Box)
  sx={
    Object {
      "backgroundColor": "#f4f5f7",
    }
  }
>
  <GlobalMenu
    barPosition="static"
  />
  <ForwardRef(Box)
    sx={
      Object {
        "marginTop": 1,
        "marginX": 0,
      }
    }
  >
    <ForwardRef(Grid)
      container={true}
      spacing={2}
    >
      <ForwardRef(Grid)
        item={true}
        xs={12}
      >
        <ArticlePaper
          variant="navi"
        >
          <Link
            to="/"
          >
            マップへ戻る
          </Link>
        </ArticlePaper>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        xs={12}
      >
        <ArticlePaper
          variant="main"
        >
          <ForwardRef(Stack)
            spacing={2}
          >
            <ForwardRef(Typography)
              align="center"
              component="h2"
              variant="h4"
            >
              title
            </ForwardRef(Typography)>
            <ForwardRef(Typography)>
              content
            </ForwardRef(Typography)>
            <ForwardRef(Box)
              sx={
                Object {
                  "position": "relative",
                }
              }
            >
              <TriviaMap
                disabled={true}
                doNotShowMarkers={true}
                height={400}
                initCenter={
                  Object {
                    "lat": 0,
                    "lng": 0,
                  }
                }
                initZoom={3}
              />
              <ForwardRef(Box)
                sx={
                  Object {
                    "backgroundColor": "rgba(0,0,0,0.5)",
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                    "zIndex": 2000,
                  }
                }
              />
            </ForwardRef(Box)>
          </ForwardRef(Stack)>
        </ArticlePaper>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        xs={12}
      >
        <ArticlePaper
          variant="side"
        >
          サイドバー
        </ArticlePaper>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </ForwardRef(Box)>
</ForwardRef(Box)>
`;

exports[`Shallow Snapshot Tests with image 1`] = `
<ForwardRef(Box)
  sx={
    Object {
      "backgroundColor": "#f4f5f7",
    }
  }
>
  <GlobalMenu
    barPosition="static"
  />
  <ForwardRef(Box)
    sx={
      Object {
        "marginTop": 5,
        "marginX": 10,
      }
    }
  >
    <ForwardRef(Grid)
      container={true}
      spacing={4}
    >
      <ForwardRef(Grid)
        item={true}
        xs={12}
      >
        <ArticlePaper
          variant="navi"
        >
          <Link
            to="/"
          >
            マップへ戻る
          </Link>
        </ArticlePaper>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        xs={8}
      >
        <ArticlePaper
          variant="main"
        >
          <ForwardRef(Stack)
            spacing={2}
          >
            <ForwardRef(Typography)
              align="center"
              component="h2"
              variant="h4"
            >
              title
            </ForwardRef(Typography)>
            <Image
              borderRadius={true}
              height="300px"
              objectFit="cover"
              src="image.jpg"
              width="full"
            />
            <ForwardRef(Typography)>
              content
            </ForwardRef(Typography)>
            <ForwardRef(Box)
              sx={
                Object {
                  "position": "relative",
                }
              }
            >
              <TriviaMap
                disabled={true}
                doNotShowMarkers={true}
                height={400}
                initCenter={
                  Object {
                    "lat": 0,
                    "lng": 0,
                  }
                }
                initZoom={3}
              />
              <ForwardRef(Box)
                sx={
                  Object {
                    "backgroundColor": "rgba(0,0,0,0.5)",
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                    "zIndex": 2000,
                  }
                }
              />
            </ForwardRef(Box)>
          </ForwardRef(Stack)>
        </ArticlePaper>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        xs={4}
      >
        <ArticlePaper
          variant="side"
        >
          サイドバー
        </ArticlePaper>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </ForwardRef(Box)>
</ForwardRef(Box)>
`;
